--- a/css/style.css
+++ b/css/style.css
@@ -41,54 +41,26 @@ a.text-primary:hover {
     font-weight: 500;
 }
 
+.container {
+    max-width: 96% !important;
+}
+
 .card-text {
     font-size: 1rem;
 }
 
-
-/* ************************************************* */
-
-.container {
-    max-width: 96%;
-    margin-top: 24px;
-}
-
-.input-element {
-    width: 100%;
-    height: 28px;
-    padding: 10px;
-    color: white;
-    background: rgba(65, 105, 225, 0.65);
-    border-radius: 5px;
-    border: none;
-    margin-top: 5px;
-}
-
-.input-element::placeholder {
-    color: orange;
-}
-
-.label-class {
-    color: white;
-    font-size: 13px;
-    margin-right: 10px;
-}
-
-.custom-checkbox,
-.custom-radio {
-    margin: 0px 5px;
-    height: 10px;
-}
-
-.btn-save {
-    width: 40%;
-    background: rgba(65, 105, 225, 0.95);
-    color: white;
-    font-weight: bolder;
+textarea {
+    min-height: 3rem;
 }
 
 
-/* --- Estilo para pantallas pequeñas */
+/* --- Estilo responsivo para tamaños de pantallas --- */
+
+@media screen and (min-width: 1366px) {
+    .container {
+        max-width: 1200px !important;
+    }
+}
 
 @media (max-width: 400px) {
     .fa-2x {
